@@ -118,6 +118,12 @@ test_dirname ()
 	s = g_path_get_dirname ("dir.c");
 	if (strcmp (s, ".") != 0)
 		return FAILED ("Expected `.', got %s", s);
+	g_free (s);
+
+	s = g_path_get_dirname ("/index.html");
+	if (strcmp (s, "/") != 0)
+		return FAILED ("Expected [/], got [%s]", s);
+	
 	return OK;
 }
 
